Fixed some CSS layout problems. Added the github icon and link. Minor changes in texts

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -8,7 +8,8 @@
   padding:0;
 }
 body {
-  background:url(../images/background.jpg) repeat-x;
+  background:url(../images/background.jpg) left top repeat-x;
+  background-attachment:fixed;
   font-size:x-small;
   font-family:Arial, Helvetica, sans-serif;
 }
@@ -86,6 +87,10 @@ li.picasa a {
   background:url(../images/picasa_32.png) no-repeat;
 }
 
+li.github a {  
+  background:url(../images/github_32.png) no-repeat;
+}
+
 /** CONTACT **/
 
 #contact {
@@ -116,10 +121,8 @@ li.picasa a {
 #contents {
   color:#a9c2eb;
   padding:2em 3em;
-  width:78em;
-  position:absolute;
-  top:0;
-  left:20em;
+  max-width:75em;
+  margin-left:20em;
 }
 #contents a {
   color:#3CF;
